fixed bug in tile spacing

--- a/styles/style.css
+++ b/styles/style.css
@@ -10,7 +10,7 @@ body {
 .game-container {
     display: none;
     background-color: black;
-    min-width: 1300px;
+    min-width: 1290px;
     border: 3px solid white;
     padding: 3px;
     grid-template-columns: 1fr 1fr 1fr;
